# replytg

./: .env.example  .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: replytg.service
docs/: style-profile.example.md
src/replytg/: bridge_reader.py  cards.py  config.py  daemon.py  db.py  drafts_writer.py  handlers.py  style_profile.py  suggest.py  waves.py
tests/: conftest.py  test_bridge_reader.py  test_cards.py  test_config.py  test_daemon.py  test_db.py  test_drafts_writer.py  test_handlers.py  test_style_profile.py  test_suggest.py  test_waves.py
